Fix alignment of work previews

--- a/src/components/Work/WorkPreview.scss
+++ b/src/components/Work/WorkPreview.scss
@@ -4,6 +4,8 @@
   justify-content: center;
   align-items: center;
   padding: 1em;
+  width: 12em;
+  height: 12em;  
 }
 
 .imgWrapper {
@@ -19,4 +21,5 @@
 
 .name {
   padding: 1em;
+  text-align: center;
 }
